--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "barrensChatGenerator",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cmoney45.github.io/React-portfolio/",
+  "homepage": "https://cmoney45.github.io/BarrensChatGenerator",
   "dependencies": {
     "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
